--- a/index.html
+++ b/index.html
@@ -1,182 +1,88 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Portfolio d'El Hadji Mamadou THIOUBE, Professeur d’Informatique de Gestion" />
-        <meta name="author" content="El Hadji Mamadou THIOUBE" />
-        <title>Portfolio - El Hadji Mamadou THIOUBE</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Bootstrap Icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
-        <!-- SimpleLightbox plugin CSS-->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-    </head>
-    <body id="page-top">
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
-            <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#page-top">El Hadji Mamadou THIOUBE</a>
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto my-2 my-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#about">À Propos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#services">Compétences</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Projets</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!-- Masthead-->
-        <header class="masthead">
-            <div class="container px-4 px-lg-5 h-100">
-                <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
-                    <div class="col-lg-8 align-self-end">
-                        <h1 class="text-white font-weight-bold">El Hadji Mamadou THIOUBE</h1>
-                        <hr class="divider" />
-                    </div>
-                    <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">Professeur d’informatique de gestion avec une solide expérience dans l'enseignement secondaire technique et professionnel.</p>
-                    </div>
-                </div>
-            </div>
-        </header>
-        <!-- About-->
-        <section class="page-section bg-primary" id="about">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">À Propos de Moi</h2>
-                        <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4">Professeur d’informatique de gestion passionné, j'aide les étudiants à développer leurs compétences en technologies de l'information depuis plusieurs années. Mon parcours professionnel m'a permis d'acquérir une expertise solide en gestion informatique et en pédagogie.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Services-->
-        <section class="page-section" id="services">
-            <div class="container px-4 px-lg-5">
-                <h2 class="text-center mt-0">Compétences</h2>
-                <hr class="divider" />
-                <div class="row gx-4 gx-lg-5">
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Analyse de Données</h3>
-                            <p class="text-muted mb-0">Collecte et analyse de données, création de tableaux de bord, modélisation prédictive.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Data Science</h3>
-                            <p class="text-muted mb-0">Sphinx, R, Pandas, Numpy, Python.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Bureautique</h3>
-                            <p class="text-muted mb-0">Word, Excel, PowerPoint, Access, Outils Google.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Pédagogie</h3>
-                            <p class="text-muted mb-0">Approche par compétences, formation professionnelle CAP, BT, BTS.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Portfolio-->
-        <div id="portfolio">
-            <div class="container-fluid p-0">
-                <div class="row g-0">
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Projet : Plateforme de gestion">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Projet</div>
-                                <div class="project-name">Plateforme de gestion du service de la documentation</div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="Projet : Analyse des déterminants de la pauvreté">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Projet</div>
-                                <div class="project-name">Analyse des déterminants de la pauvreté</div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Contact-->
-        <section class="page-section" id="contact">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-lg-8 col-xl-6 text-center">
-                        <h2 class="mt-0">Contactez-moi</h2>
-                        <hr class="divider" />
-                        <p class="text-muted mb-5">Pour toute question ou opportunité, n'hésitez pas à me contacter.</p>
-                    </div>
-                </div>
-                <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
-                    <div class="col-lg-6">
-                        <form id="contactForm" data-sb-form-api-token="API_TOKEN">
-                            <!-- Name input-->
-                            <div class="form-floating mb-3">
-                                <input class="form-control" id="name" type="text" placeholder="Votre nom..." required />
-                                <label for="name">Nom complet</label>
-                            </div>
-                            <!-- Email address input-->
-                            <div class="form-floating mb-3">
-                                <input class="form-control" id="email" type="email" placeholder="name@example.com" required />
-                                <label for="email">Adresse email</label>
-                            </div>
-                            <!-- Phone number input-->
-                            <div class="form-floating mb-3">
-                                <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890" required />
-                                <label for="phone">Numéro de téléphone</label>
-                            </div>
-                            <!-- Message input-->
-                            <div class="form-floating mb-3">
-                                <textarea class="form-control" id="message" placeholder="Votre message ici..." style="height: 10rem" required></textarea>
-                                <label for="message">Message</label>
-                            </div>
-                            <!-- Submit Button-->
-                            <div class="d-grid"><button class="btn btn-primary btn-xl" id="submitButton" type="submit">Envoyer</button></div>
-                        </form>
-                    </div>
-                </div>
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-lg-4 text-center mb-5 mb-lg-0">
-                        <i class="bi-phone fs-2 mb-3 text-muted"></i>
-                        <div>+221 77 724 09 27</div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Footer-->
-        <footer class="bg-light py-5">
-            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2024 - El Hadji Mamadou THIOUBE</div></div>
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- SimpleLightbox plugin JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>El Hadji Mamadou THIOUBE - Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            background-color: #f4f4f4;
+        }
+        h1, h2, h3 {
+            color: #333;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            background: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>El Hadji Mamadou THIOUBE</h1>
+        <p><strong>Professeur d’Informatique de Gestion</strong></p>
+        <p>Email : hadjimamadou22@gmail.com | Téléphone : +221 77 724 09 27</p>
+
+        <h2>Présentation</h2>
+        <p>Professeur d’informatique de gestion avec une solide expérience dans l'enseignement secondaire technique et professionnel. Assidu, ponctuel, et méthodique, je suis également doté d'une grande conscience professionnelle et d'une forte pédagogie.</p>
+
+        <h2>Expériences Professionnelles</h2>
+        <ul>
+            <li>Depuis Décembre 2022 : Professeur d’informatique de gestion, Lycée Seydina Limamou Laye, Guédiawaye (Dakar).</li>
+            <li>Octobre 2019 – Décembre 2022 : Professeur d’informatique de gestion, Lycée Technique Agricole Emile Badiane, Bignona (Ziguinchor).</li>
+            <li>Octobre 2016 – Octobre 2019 : Formateur d’informatique de gestion, Centre de Formation Professionnelle de Kanel (Matam).</li>
+            <li>Consultant Formateur en Bureautique :</li>
+            <ul>
+                <li>Aout 2021 : 15 enseignants à Bargny - Modules : Word, Excel, PowerPoint, G-Meet, G-Drive, G-Classroom.</li>
+                <li>Septembre 2021 : 25 étudiants à Bargny - Modules : Word, Excel, PowerPoint.</li>
+                <li>Septembre 2018 : 20 étudiants à Bargny - Modules : Word, Excel, PowerPoint.</li>
+                <li>Novembre 2017 : 10 formateurs du centre de formation professionnelle de Kanel - Modules : Word, Excel, PowerPoint.</li>
+                <li>Septembre 2017 : 20 étudiants à Bargny - Modules : Word, Excel, PowerPoint.</li>
+            </ul>
+        </ul>
+
+        <h2>Formations</h2>
+        <ul>
+            <li>2015 – 2016 : Certificat d’Aptitude à l’Enseignement Secondaire Technique et Professionnel (CAESTP), Spécialité : Informatique de gestion, Ecole Normale Supérieure d’Enseignement Technique et Professionnel (ENSETP), UCAD.</li>
+            <li>2013 – 2014 : Master 2 Option Econométrie Bancaire et Finance Quantitative (EBFQ), Faculté des Sciences Economiques et de Gestion (FASEG), UCAD.</li>
+            <li>2012 – 2013 : Master 1 Option Économie, Faculté des Sciences Economiques et de Gestion (FASEG), UCAD.</li>
+            <li>2008 – 2009 : Baccalauréat Série S2, Lycée Abdoulaye SADJI, Rufisque.</li>
+        </ul>
+
+        <h2>Compétences Techniques</h2>
+        <ul>
+            <li>Analyse de Données & Modélisation Prédictive</li>
+            <li>Outils de Data Science : Sphinx, R, Pandas, Numpy, Python</li>
+            <li>Infographie : Canva, Adobe Photoshop</li>
+            <li>Bureautique & Outils Google : Microsoft Office (Word, Excel, PowerPoint, Access), G-Sheets, G-Agenda, G-Drive, etc.</li>
+            <li>Pédagogie & Méthodes d’Enseignement : Approche par compétences, formation professionnelle CAP, BT, BTS</li>
+        </ul>
+
+        <h2>Projets Réalisés</h2>
+        <ul>
+            <li>Août 2017 : Soutenance Master 2 EBFQ - Sujet : « Les déterminants de la pauvreté ».</li>
+            <li>Juillet 2016 : Soutenance CAESTP - « Étude et réalisation d’une plateforme de gestion du service de la documentation de l’Ecole Normale Supérieure d’Enseignement Technique et Professionnel (ENSETP) ».</li>
+        </ul>
+
+        <h2>Langues</h2>
+        <ul>
+            <li>Français : Courant</li>
+            <li>Anglais : Niveau intermédiaire</li>
+        </ul>
+
+        <h2>Centres d’Intérêt</h2>
+        <ul>
+            <li>Scrabble</li>
+            <li>Sport</li>
+            <li>Lecture</li>
+        </ul>
+    </div>
+</body>
 </html>
